# bumpy_port

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PROJECT_STATUS.md  README.md
analysis/: README.md  RESOURCE_PIPELINE.md
analysis/catalog/: function_addresses.csv  functions.csv  globals.csv
analysis/ghidra_scripts/: ExportFunctions.py  ExportLoaderDecomp.py
analysis/reports/: ghidra-analysis.json  mz-header.json  unpack-validation.json
analysis/specs/: game-loop.md  level-formats.md  menu-behavior.md  menu-resource-formats.md  move-scripts.md  screen-flow.md  tile-semantics.md
config/: original-assets.sha256
docs/: PROJECT_STATUS.md
docs/superpowers/plans/: 2026-06-13-reverse-engineering-foundation.md  2026-06-15-resource-formats-and-menu.md  2026-06-21-world-map-screen.md  2026-06-27-worlds-2-9.md  2026-07-05-high-score-screen.md  2026-07-06-audio-sound-system.md  2026-07-06-startup-splash.md  2026-07-08-3d-render-mode.md  2026-07-08-3d-widescreen-43.md  2026-07-09-port-settings-overlay.md  fixes.md  stage-1-vec-and-title-screen.md
docs/superpowers/specs/: 2026-06-13-bumpy-accurate-port-design.md  2026-06-21-world-map-screen-design.md  2026-06-27-worlds-2-9-design.md  2026-07-05-high-score-screen-design.md  2026-07-06-audio-sound-system-design.md  2026-07-06-startup-splash-design.md  2026-07-08-3d-render-mode-design.md  2026-07-08-3d-widescreen-43-design.md  2026-07-09-port-settings-overlay-design.md  bumpy-port-design.md
reference/: README.md  dosbox-x.conf
shaders3d/: bloom.frag  scene.vert  shadow.frag  sprite.frag  wall.frag
skills/source-port-reverse-engineering/: SKILL.md
skills/source-port-reverse-engineering/agents/: openai.yaml
skills/source-port-reverse-engineering/references/: evidence-contract.md
src/app/: bumpy_port.rc  main.cpp
src/audio/: audio_engine.cpp  audio_engine.h  midi_opl_player.cpp  midi_opl_player.h  opl2.cpp  opl2.h  speaker_sfx.cpp  speaker_sfx.h
src/core/: asset_manifest.cpp  asset_manifest.h  indexed_framebuffer.cpp  indexed_framebuffer.h  port_config.cpp  port_config.h
src/game/: app.cpp  app.h  ball_motion.cpp  ball_motion.h  high_score_screen.cpp  high_score_screen.h  high_scores.cpp  high_scores.h  level_game.cpp  level_game.h  menu.cpp  menu.h  move_scripts.gen.cpp  move_scripts.h  object_anim.gen.cpp  object_anim.h  password_screen.cpp  password_screen.h  player_dispatch.gen.cpp  player_dispatch.h  settings_overlay.cpp  settings_overlay.h  speed_pacer.h  tile_reactions.cpp  tile_reactions.gen.cpp  tile_reactions.h  world_graphs.gen.cpp  world_graphs.h  world_map.cpp  world_map.h
src/platform_gl3/: gl33.cpp  gl33.h  gl_presenter.cpp  gl_presenter.h  gl_util.cpp  gl_util.h  scene_renderer.cpp  scene_renderer.h
src/platform_sdl3/: sdl_app.cpp  sdl_app.h  sdl_audio.cpp  sdl_audio.h
src/resources/: adlib_bank.cpp  adlib_bank.h  binary_reader.cpp  binary_reader.h  entity_sprites.cpp  entity_sprites.h  font.cpp  font.h  level_resources.cpp  level_resources.h  menu_resources.cpp  menu_resources.h  midi_song.cpp  midi_song.h  sfx_tables.cpp  sfx_tables.gen.cpp  sfx_tables.h  sprite_frame.cpp  sprite_frame.h  vec.cpp  vec.h  world_resources.cpp  world_resources.h
src/video/: board_renderer.cpp  board_renderer.h  high_score_renderer.cpp  high_score_renderer.h  hud.cpp  hud.h  map_renderer.cpp  map_renderer.h  menu_renderer.cpp  menu_renderer.h  password_renderer.cpp  password_renderer.h  screen_image.cpp  screen_image.h  screen_transition.cpp  screen_transition.h  settings_renderer.cpp  settings_renderer.h  viewport.cpp  viewport.h
src/video3d/: blur.cpp  blur.h  mat4.cpp  mat4.h  scene3d.cpp  scene3d.h  slab_mesh.cpp  slab_mesh.h
tests/cpp/: adlib_bank_test.cpp  app_test.cpp  asset_manifest_test.cpp  audio_engine_test.cpp  ball_motion_test.cpp  binary_reader_test.cpp  blur_test.cpp  board_renderer_test.cpp  entity_sprites_test.cpp  font_test.cpp  high_score_renderer_test.cpp  high_score_screen_test.cpp  high_scores_test.cpp  hud_test.cpp  indexed_framebuffer_test.cpp  level_game_test.cpp  level_resources_test.cpp  map_renderer_test.cpp  mat4_test.cpp  menu_renderer_test.cpp  menu_resources_test.cpp  menu_test.cpp  midi_opl_player_test.cpp  midi_song_test.cpp  move_scripts_test.cpp  opl2_test.cpp  password_renderer_test.cpp  password_screen_test.cpp  port_config_test.cpp  scene3d_test.cpp  screen_transition_test.cpp  settings_overlay_test.cpp  settings_renderer_test.cpp  sfx_tables_test.cpp  slab_mesh_test.cpp  speaker_sfx_test.cpp  speed_pacer_test.cpp  sprite_frame_test.cpp  tile_reactions_test.cpp  vec_test.cpp  (+4 more)
tests/python/: test_asset_manifest.py  test_compare_mz_images.py  test_ghidra_catalog.py  test_mz.py  test_reference_runner.py  test_unpack_bumpy.py
tools/: package_release.ps1  verify.ps1
tools/assets/: manifest.py
tools/audio_render/: main.cpp
tools/re/: bootstrap_tools.ps1  build_icon.py  compare_mz_images.py  decompile_loader.ps1  dump_entity_ai.py  dump_hud_font.py  dump_move_scripts.py  dump_object_anim.py  dump_player_dispatch.py  dump_sfx.py  dump_tile_tables.py  dump_world_graphs.py  ghidra_catalog.py  mz.py  report_mz.py  run_ghidra_analysis.ps1  setup_ghidra.ps1  unpack_bumpy.py  validate_unpack.py
tools/reference/: PLAY.txt  run_reference.ps1
